Comments and better code